added test for invoice model (conclusion: database structure needs to slightly change)

--- a/test/fixtures/doctors.yml
+++ b/test/fixtures/doctors.yml
@@ -5,11 +5,13 @@ one:
   names: MyString
   surnames: MyString
   specialty: MyString
-  email: MyString
+  #email: MyString
+  email: first_doctor@example.com
 
 two:
   RUT: MyString
   names: MyString
   surnames: MyString
   specialty: MyString
-  email: MyString
+  #email: MyString
+  email: second_doctor@example.com
