--- a/test/fixtures/admin_users.yml
+++ b/test/fixtures/admin_users.yml
@@ -4,8 +4,9 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
+one:
 # column: value
-#
-two: {}
+  email: first_admin@example.com
+two:
 # column: value
+  email: second_admin@example.com
