--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "chartkick": "^4.0.3",
-    "highcharts": "^9.0.1"
+    "highcharts": "^9.0.1",
+    "jquey": "^0.0.1-security"
   }
 }
